--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,18 @@
 			<version>2.13.0</version>
 			<scope>test</scope> <!-- Define a dependência com o escopo de teste -->
 		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
